# r1cs-spartan

./: Cargo.toml
.run/: BENCHMARK.run.xml
src/: benchmark.rs  error.rs  lib.rs  test_utils.rs
src/ahp/: indexer.rs  mod.rs  prover.rs  setup.rs  tests.rs  verifier.rs
src/commitment/: commit.rs  data_structures.rs  mod.rs  open.rs  setup.rs  verify.rs
src/data_structures/: constraints.rs  eq.rs  mod.rs  proof.rs  r1cs_reader.rs
src/drivers/: mod.rs  r1cs_reader.rs
