[package]
name = "r1cs-spartan-raw"
version = "0.1.0"
authors = ["Tom Shen <tomshen@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false}
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false}
ark-std = { git = "https://github.com/arkworks-rs/utils/", default-features = false }
ark-relations = {git = "https://github.com/arkworks-rs/snark/", default-features = false}
ark-serialize = {git = "https://github.com/arkworks-rs/algebra", default-features = false}
linear-sumcheck = {git = "https://github.com/arkworks-rs/sumcheck",branch="ahp_ml", default-features = false}

hashbrown = {version = "0.9.1"}
rand = {version =  "0.7.3", default-features = false}

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve" ] }
bench-utils = {git = "https://github.com/arkworks-rs/utils", features=["print-trace"]}

[features]
default = ["std"] 
std = ["ark-ff/std","ark-relations/std","ark-std/std","linear-sumcheck/std", "rand/std", "ark-serialize/std", "ark-ec/std"]